--- a/app/views/evaluations/take.html.haml
+++ b/app/views/evaluations/take.html.haml
@@ -24,16 +24,19 @@
           %h4 Create an Account
           = image_tag LIGHT_BULB_URL, style: "height: 15px; display: inline;"
           %p Registering allows #{@evaluation.company} to verify your identity.
-          .signup
-            = link_to "/auth/google_oauth2", style: "display: inline-block; margin-right: 10px; margin-bottom: 0;", class: "button btn" do
-              = image_tag ICON_LOGIN_GOOGLE, alt: "Google sign up"
-              %span.landingbuttontext Google sign up »
-            = link_to "/auth/linkedin_oauth2", style: "display: inline-block; margin: 0 18px;", class: "button btn" do
-              = image_tag ICON_LOGIN_LINKEDIN, alt: "LinkedIn sign up"
-              %span.landingbuttontext LinkedIn sign up »
-            = link_to "/auth/github", style: "display: inline-block; margin-left: 10px;", class: "button btn" do
-              = image_tag ICON_LOGIN_GITHUB, alt: "GitHub sign up"
-              %span.landingbuttontext GitHub sign up »
+          - if current_user
+            .signup
+              = link_to "/auth/google_oauth2", style: "display: inline-block; margin-right: 10px; margin-bottom: 0;", class: "button btn" do
+                = image_tag ICON_LOGIN_GOOGLE, alt: "Google sign up"
+                %span.landingbuttontext Google sign up »
+              = link_to "/auth/linkedin_oauth2", style: "display: inline-block; margin: 0 18px;", class: "button btn" do
+                = image_tag ICON_LOGIN_LINKEDIN, alt: "LinkedIn sign up"
+                %span.landingbuttontext LinkedIn sign up »
+              = link_to "/auth/github", style: "display: inline-block; margin-left: 10px;", class: "button btn" do
+                = image_tag ICON_LOGIN_GITHUB, alt: "GitHub sign up"
+                %span.landingbuttontext GitHub sign up »
+          - else
+            %h5 Thank you for signing in, #{current_user.name.split.first}!
         .step
           .img-circle
             %span 2
