--- a/app/views/tasks/continue.html.haml
+++ b/app/views/tasks/continue.html.haml
@@ -1,4 +1,3 @@
-- @code = "alkdjsf;lkajsdf"
 - @enrollment ||= @path.enrollments.new
 - @section ||= @path.next_section
 - @task ||= @section.next_task
@@ -24,7 +23,7 @@
       = image_tag @path.path_pic, style: "width: 50px; height: 50px;", alt: "#{@path.name}"
       %div{ style: "display:inline-block;" }
         %span.name <strong>#{@path.name}:</strong> #{@section.name}</span>
-      - if current_user
+      - if current_user and @question_count and @session_total
         %div.quiz_progress
           Question #{@question_count} / #{@session_total}
     %div{ style: "text-align:center;" }
@@ -37,8 +36,7 @@
           = @task.quoted_text
         %hr{ style: "margin: 12px auto; width: 35%; border: 0; border-top: 1px solid #eeeeee; border-bottom: 1px solid #ffffff;" }
       %div.responsespace{ data: { type: @task.answer_type } }
-        = form_tag(complete_section_path(@section.id), :remote => true, :method => "put", :id => "challenge_form") do
-          = hidden_field_tag :task_id, @task.id
+        = form_tag(complete_task_path(@task.id), :remote => true, :method => "put", :id => "challenge_form") do
           = hidden_field_tag :points_remaining, 100
           = hidden_field_tag :streak, @streak
           
