--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -798,7 +798,7 @@ ul.inlinedisplay div.mosaic-block.bar2 { height: 130px; }
 
 $employer_blue: rgba(36, 72, 109, 0.8);
 $employer_orange: rgba(126, 78, 54, 0.78);
-$employer_green: #729959;
+$employer_green: rgba(114, 153, 89, 0.88);
 $employer_orange_light: rgba(212, 152, 123, 0.14);
 $employer_green_light: rgba(150, 201, 117, 0.27);
 
@@ -1069,6 +1069,9 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
   
   h2{ font-size: 30px; border-bottom: 1px solid #DDD; }
   
+  .opaque {
+    opacity: .6;
+  }
   .header {
     padding-bottom: 10px;  
     border-bottom: 1px solid #EEE;
@@ -1143,7 +1146,16 @@ $employer_green_light: rgba(150, 201, 117, 0.27);
         display: inline-block; vertical-align: top; margin-left: 10px; padding-top: 2px; width: 92%;
         
         h4 { font-size: 24px; margin-bottom: 4px; }
+        h5 { text-align: center; font-size: 15px; margin-top: 12px;}
         p { display: inline-block; margin-bottom: 0; }
+        form {
+          margin-top: 25px;
+          
+          div {display: inline-block;}
+          label {font-size: 15px;}
+          
+          .button { float: right; background: $employer_green; text-shadow: none;}
+        }
         
         .challenge_holder{
           padding: 15px 3px; margin-top: 20px;
