employer styles added to create path stuff

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -408,7 +408,7 @@ h1, h2, h3, h4, h5, h6, p, div, a { font-family: 'MuliRegular', 'Helvetica', 'Ar
 /* Create and Administer/Revolution */
 .single_pane { padding: 15px; background-color: white; border-radius: 4px; min-height: 400px;}
 .pills a { line-height: 23px; cursor: pointer }
-ul.inlinedisplay div.mosaic-block.bar2 { height: 130px; }
+ul.inlinedisplay div.mosaic-block.bar2 { height: 130px; margin-bottom: 15px;}
 .overview td { text-align: center; border: 1px solid #DDD; width: 80px; }
 
 /* Footer/Revolution */
